k8s/quarkus-simplerest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: quarkus-simplerest-deployment
spec:
  # Numero di pods
  replicas: 1
  selector:
    matchLabels:
      component: simplerest
  template:
    metadata:
      labels:
        component: simplerest
    spec:
      containers:
        - name: simplerest
          image: quarkus-simplerest:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
