k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # Per togliere prefisso da url come per esempio api/
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  #Serie di regole di instradamento
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend: 
              serviceName: quarkus-simplerest-ip-service
              servicePort: 8080
